# todomvc-haskell-servant-purescript

./: .gitignore  LICENSE  Makefile  README.md  bower.json  todomvc-haskell-servant-purescript.cabal
haskell_src/: Todo.hs
haskell_src/Todo/: App.hs  Instances.hs  JSON.hs  Lenses.hs  Types.hs
haskell_src/Web/TodoMVC/: Servant.hs
haskell_src/Web/TodoMVC/Servant/: API.hs  Shared.hs
html/: index.html
src/: Helpers.purs
src/Helpers/: Map.purs  Monad.purs  UI.purs
src/Helpers/Monad/: Array.purs
src/Todo/: Main.purs  Model.purs  Shared.purs
src/Todo/Component/: List.purs  Todo.purs
src/Todo/Component/List/: Instances.purs  Types.purs
src/Todo/Model/: Ajax.purs  Functions.purs  Instances.purs  Types.purs
