name:                todomvc-haskell-servant-purescript
version:             0.1.0.0
synopsis:            todomvc implemented in haskell+servant and purescript
description:         todomvc implemented in haskell+servant and purescript
homepage:            https://github.com/adarqui/todomvc-haskell-servant-purescript
license:             MIT
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    Web.TodoMVC.Servant
    Web.TodoMVC.Servant.API
    Web.TodoMVC.Servant.Shared
    Todo
    Todo.App
    Todo.Types
  build-depends:       base >=4.7 && <4.9, aeson, containers, either, lens-aeson, lens >= 4.12.3, mtl, servant, servant-server, stm, text, transformers, wai, warp
  hs-source-dirs:      haskell_src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
